--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Bjorn Lu",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "@octokit/action": "^2.0.0",
+    "parse-diff": "^0.7.0"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.21.1",
