--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@octokit/action": "^2.0.0",
-    "parse-diff": "^0.7.0"
+    "parse-diff": "^0.7.0",
+    "snoowrap": "^1.22.0"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.21.1",
